[project]
name = "message-van"
version = "0.1.0"
description = "Python Event-Driven Architecture without the Administration."
authors = [
    { name = "Thomas Vanhelden", email = "thomas.vanhelden@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/message_van"]
